--- a/style.css
+++ b/style.css
@@ -34,5 +34,5 @@ section {
     bottom: 160px;
 }
 
-/*partituras / lofi / stop-motion / */
+/*partituras / lofi / stop-motion / trombose / gangrena / metais pesados / enfisema / nicotina / nitrosamina / tamponente / branqueador optico / sacarose / sacarina / edulcorante / centeio / nougat / emulsificante / baunilha / dextrose / acidulante / manjerona / cultura starter / periplaneta americana*/
 
